[gd_scene load_steps=11 format=3 uid="uid://dpnd8ekgo4bj3"]

[ext_resource type="Script" uid="uid://owdk3wndawgn" path="res://world_scenes/system/system.gd" id="1_vw61b"]
[ext_resource type="PackedScene" uid="uid://d083d45d28pl3" path="res://ui_scenes/camera/game_camera.tscn" id="2_ic1ng"]
[ext_resource type="Script" uid="uid://cflfm7nppjcy0" path="res://world_scenes/system/lightRenderViewport.gd" id="2_lymq3"]
[ext_resource type="Script" uid="uid://dryp6m5lgkql1" path="res://world_scenes/system/PauseMenu.gd" id="4_odccu"]
[ext_resource type="PackedScene" uid="uid://d0j06gpiq8jxo" path="res://ui_scenes/mainMenu/textbutton/text_button.tscn" id="5_0l5e1"]
[ext_resource type="Texture2D" uid="uid://celgr5v0qm8m3" path="res://ui_scenes/mouseCursor/mouseIcon.png" id="5_8xxx0"]
[ext_resource type="PackedScene" uid="uid://crkseldnn7m4" path="res://ui_scenes/options/options_menu.tscn" id="6_4o6g1"]
[ext_resource type="PackedScene" uid="uid://d32dl3s4offu" path="res://ui_scenes/achievements/achievementsMenu.tscn" id="7_s47mu"]

[sub_resource type="LabelSettings" id="LabelSettings_nswgb"]
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o15mw"]
font_color = Color(0.486275, 0.486275, 0.486275, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[node name="System" type="Node2D"]
process_mode = 3
script = ExtResource("1_vw61b")

[node name="Objects" type="Node2D" parent="."]
process_mode = 1

[node name="CosmicBodies" type="Node2D" parent="."]
process_mode = 1

[node name="GAME CAMERA" parent="." instance=ExtResource("2_ic1ng")]
process_mode = 1

[node name="lightRenderViewport" type="SubViewport" parent="."]
process_mode = 1
disable_3d = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
gui_disable_input = true
canvas_cull_mask = 4293918751
size = Vector2i(576, 576)
script = ExtResource("2_lymq3")

[node name="Camera2D" type="Camera2D" parent="lightRenderViewport"]
anchor_mode = 0

[node name="dropShadowViewport" type="SubViewport" parent="."]
process_mode = 1
disable_3d = true
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
gui_disable_input = true
sdf_oversize = 0
canvas_cull_mask = 4293918733
size = Vector2i(400, 300)
script = ExtResource("2_lymq3")

[node name="Camera2D" type="Camera2D" parent="dropShadowViewport"]
ignore_rotation = false

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 2
visible = false
script = ExtResource("4_odccu")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
offset_left = -11.0
offset_top = -7.0
offset_right = 410.0
offset_bottom = 310.0
color = Color(0, 0, 0, 0.815686)

[node name="Label" type="Label" parent="PauseMenu"]
offset_left = 11.0
offset_top = 6.0
offset_right = 411.0
offset_bottom = 38.0
text = "game paused"
label_settings = SubResource("LabelSettings_nswgb")

[node name="lastsave" type="Label" parent="PauseMenu"]
offset_left = 11.0
offset_top = 49.0
offset_right = 409.0
offset_bottom = 65.0
text = "last saved: 30s ago"
label_settings = SubResource("LabelSettings_o15mw")

[node name="savegame" parent="PauseMenu" instance=ExtResource("5_0l5e1")]
offset_left = 11.0
offset_top = 101.0
offset_right = 78.0
offset_bottom = 118.0
buttonText = "save game"

[node name="options" parent="PauseMenu" instance=ExtResource("5_0l5e1")]
offset_left = 11.0
offset_top = 156.0
offset_right = 58.0
offset_bottom = 173.0
buttonText = "options"

[node name="medals" parent="PauseMenu" instance=ExtResource("5_0l5e1")]
offset_left = 11.0
offset_top = 128.0
offset_right = 55.0
offset_bottom = 145.0
buttonText = "medals"

[node name="saveandquit" parent="PauseMenu" instance=ExtResource("5_0l5e1")]
offset_left = 11.0
offset_top = 185.0
offset_right = 100.0
offset_bottom = 202.0
buttonText = "save and quit"

[node name="unpause" parent="PauseMenu" instance=ExtResource("5_0l5e1")]
offset_left = 11.0
offset_top = 75.0
offset_right = 95.0
offset_bottom = 92.0
buttonText = "back to game"

[node name="optionsMenu" parent="PauseMenu" instance=ExtResource("6_4o6g1")]
visible = false
position = Vector2(194, 0)

[node name="achievementsMenu" parent="PauseMenu" instance=ExtResource("7_s47mu")]
visible = false

[node name="MouseIcon" type="Sprite2D" parent="PauseMenu"]
position = Vector2(251, 192)
texture = ExtResource("5_8xxx0")
offset = Vector2(4, 4)

[connection signal="pressed" from="PauseMenu/savegame" to="PauseMenu" method="_on_savegame_pressed"]
[connection signal="pressed" from="PauseMenu/options" to="PauseMenu" method="_on_options_pressed"]
[connection signal="pressed" from="PauseMenu/medals" to="PauseMenu" method="_on_medals_pressed"]
[connection signal="pressed" from="PauseMenu/saveandquit" to="PauseMenu" method="_on_saveandquit_pressed"]
[connection signal="pressed" from="PauseMenu/unpause" to="PauseMenu" method="_on_unpause_pressed"]
